# opencv

./: CMakeLists.txt  README.trace
cmake/: FindFftw.cmake  FindLibYuv.cmake  FindTracerCommon.cmake  OpenCVCompilerOptions.cmake  OpenCVFindLibsVideo.cmake
cmake/templates/: cvconfig.h.in
modules/calib3d/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/src/: copy.cpp  dxt.cpp  ocl.cpp
modules/core/src/fftw/: fftw3-ocvext.cpp  fftw3-ocvext.h
modules/features2d/: CMakeLists.txt
modules/highgui/: CMakeLists.txt
modules/highgui/include/opencv2/highgui/: highgui_c.h
modules/highgui/src/: cap.cpp  cap_trace.cpp  precomp.hpp
modules/imgcodecs/: CMakeLists.txt
modules/imgproc/: CMakeLists.txt
modules/imgproc/src/: color.cpp
modules/objdetect/: CMakeLists.txt
modules/photo/: CMakeLists.txt
modules/photo/src/: fast_nlmeans_denoising_invoker_commons.hpp
modules/shape/: CMakeLists.txt
modules/stitching/: CMakeLists.txt
modules/superres/: CMakeLists.txt
modules/video/: CMakeLists.txt
modules/videoio/: CMakeLists.txt
modules/videoio/include/opencv2/videoio/: videoio_c.h
modules/videoio/src/: cap.cpp  cap_trace.cpp  precomp.hpp
modules/videostab/: CMakeLists.txt
samples/: CMakeLists.txt
samples/trace/: CMakeLists.txt  motiontrackgray.cpp  motiontracknoncolor.cpp  tracetest.cpp
